Fix WASM template runtime error bar default visibility (#136)

--- a/src/MachSoft.Template.Official.Wasm/template-content/wwwroot/app.css
+++ b/src/MachSoft.Template.Official.Wasm/template-content/wwwroot/app.css
@@ -50,4 +50,22 @@ body {
   gap: 0.75rem;
 }
 
+#blazor-error-ui {
+  background: #ffe9e9;
+  bottom: 0;
+  box-shadow: 0 -1px 2px rgb(0 0 0 / 0.2);
+  display: none;
+  left: 0;
+  padding: 0.6rem 1.25rem 0.7rem;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
+}
+
+#blazor-error-ui .dismiss {
+  cursor: pointer;
+  position: absolute;
+  right: 0.75rem;
+  top: 0.5rem;
+}
 
